--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "assert": "^1.1.2",
     "assert-plus": "^0.1.5",
+    "bcrypt": "^0.8.0",
     "body-parser": "~1.8.1",
     "bower": "^1.3.12",
     "bunyan": "^1.2.0",
