--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "~1.8.1",
     "bower": "^1.3.12",
     "bunyan": "^1.2.0",
+    "coffee-script": "^1.8.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
