--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "express-bunyan-logger": "^1.1.0",
+    "express-ipfilter": "^0.3.1",
     "jade": "~1.6.0",
     "knex": "^0.6.22",
     "mysql": "^2.5.2",
+    "mysql2": "^1.5.1",
     "nodemailer": "^1.3.0",
     "nodeunit": "^0.9.0",
     "passport": "^0.2.1",
